--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main Page</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li>
+            <a href="recipes/lasagna.html">Lasagna</a>
+        </li>
+        <li>
+            <a href="recipes/turkey.html">Deep-Fried Turkey</a>
+        </li>
+        <li>
+            <a href="recipes/egg_roll.html">Egg Roll in a Bowl</a>
+        </li>
+    </ul>
 </body>
 </html>
