Swap picture of egg roll

--- a/recipes/egg_roll.html
+++ b/recipes/egg_roll.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Egg Roll in a Bowl</h1>
-    <img src="lasagna.jpeg" alt="Picture of lasagne">
+    <img src="egg_roll.jpg" alt="Picture of Egg roll in bowl">
     <p>
         You might think this was invented to avoid all of that time-consuming wrapping and messy deep-frying, but it wasn't! It was invented by the keto people, because they can't eat egg roll wrappers-but this guy can. So, instead of what's really egg roll filling in a bowl, we're doing the real thing in all of its tasty and textural glory. Garnish with more green onions if desired.
     </p>
