Add return to main page link to recipe pages

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -62,5 +62,9 @@
             </li>
         </ol>
     </ul>
+    <br>
+    <p>
+        <a href="../index.html">Return to main page</a>
+    </p>
 </body>
 </html>
