--- a/recipes/egg_roll.html
+++ b/recipes/egg_roll.html
@@ -65,5 +65,9 @@
             </li>
         </ol>
     </ul>
+    <br>
+    <p>
+        <a href="../index.html">Return to main page</a>
+    </p>
 </body>
 </html>
