--- a/recipes/turkey.html
+++ b/recipes/turkey.html
@@ -39,5 +39,9 @@
             </li>
         </ol>
     </ul>
+    <br>
+    <p>
+        <a href="../index.html">Return to main page</a>
+    </p>
 </body>
 </html>
